--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,7 +40,8 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "check-prop-types": "^1.1.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "moxios": "^0.4.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
